Spacing fix

--- a/src/css/_specific.less
+++ b/src/css/_specific.less
@@ -3,7 +3,7 @@
   margin: @section-y-margin auto;
 
   &__title {
-    margin-top: -1rem;
+    margin-top: 0;
     margin-bottom: 0;
     animation: scalein @transition-duration*2;
   }
